# pubwiki

./: .env.example  .gitignore  .npmrc  Cargo.toml  Justfile  LICENSE.md  README.md  env.d.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.claude/: settings.json
.github/: copilot-instructions.md
app/: docker-compose.yml
app/main/: Dockerfile  docker-compose.yml
app/mariadb/: Dockerfile  docker-compose.yml
app/mediawiki/: Dockerfile  README.md  docker-compose.yml
app/mediawikifarm/: Dockerfile  docker-compose.yml
apps/coming-soon/: package.json  tsconfig.json  wrangler.jsonc
apps/docs/: DOCS_SITE_ANALYSIS.md  README.md  mdsvex.config.js  package.json  svelte.config.js  vite.config.ts  wrangler.jsonc
apps/homepage/: HOMEPAGE_ANALYSIS.md  README.md  package.json  svelte.config.js
apps/hub/: .env.example  .env.preview  .gitignore  AGENTS.md  package.json  vite.config.ts  wrangler.jsonc
apps/player/: .env.example  .env.preview  .gitignore  eslint.config.mjs  package.json  svelte.config.js  tsconfig.json  vite.config.ts  (+1 more)
backend/: .gitignore  vitest.config.ts  wrangler.jsonc
deploy/: README.md
dev/: docker-compose.yml  opensearch_domain.json
e2e/: .gitignore  AGENTS.md  package.json  playwright.config.ts  tsconfig.json
frontend/: package.json  wrangler.jsonc
infra/: docker-compose.yml
messages/: en.json
project.inlang/: project_id
services/: package.json  tsconfig.json  vitest.e2e.config.ts  worker-configuration.d.ts
services/provisioner/: Cargo.toml  README.md  openapi.yaml
services/provisioner/docker/: Dockerfile
services/provisioner/examples/: full_chain_create_and_sse.rs
services/provisioner/src/: auth.rs  env.rs  error.rs  events.rs  lib.rs  main.rs  manage.rs  provision.rs  validate.rs
services/provisioner/src/provision/: db.rs  docker.rs  fs.rs  ini.rs  mod.rs  oauth.rs  orchestrator.rs
services/provisioner/tests/: api_smoke.rs  events_serde.rs
services/recorder/: Cargo.toml  README.md
services/recorder/docker/: Dockerfile
services/recorder/src/: main.rs
services/runjobs/: Cargo.toml
services/runjobs/docker/: Dockerfile
services/runjobs/src/: main.rs
smoketest/: README.md  deno.jsonc
(+1133 files in other folders)
