[package]
name = "wikifarm-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "http1", "json", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
thiserror = "2.0"
futures = "0.3"
async-stream = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "macros", "uuid", "chrono"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager", "json"] }
chrono = { version = "0.4", features = ["serde"] }
rcgen = "0.14"
bollard = { version = "0.19", features = ["ssl"] }
rand = "0.9.2"
rust-ini = "0.21"
tower-http = { version = "0.6", features = ["trace"] }
async-trait = "0.1"
anyhow = "1"
regex = "1.11.3"

# Database (add when wiring real DB)
# sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "macros", "uuid", "chrono"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
anyhow = "1"
