[package]
name = "recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
http = "1"
